# Sentinel

./: .env.example  .gitignore  GETTING-STARTED.md  HOST-SETUP.md  LICENSE  README.md  ROADMAP.md  SETUP.md  VIEWER-GUIDE.md  docker-compose.yml  package-lock.json  package.json
docker/: backend.Dockerfile  nginx.conf  web.Dockerfile
server/: ais.js  analytics.js  bikeshare.js  coast.js  config.js  db.js  gdelt.js  gpsjam.js  index.js  logic.test.js  opensky.js  package-lock.json  package.json  ports.js  verify-ais.js
server/data/: anchorages.json  coast.json  convert-anchorages.mjs  convert-coast.mjs  convert-maritime.mjs  demo-scenario.ndjson  maritime.json  wpi.json
server/fixtures/: aisstream-position-report.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
web/: index.html  package-lock.json  package.json  registry.test.js  vite.config.js
web/src/: buildings.js  config.js  contactFilters.js  darkpulse.js  dossiers.js  globe.js  labels.js  main.js  markers.js  measure.js  nationwalls.js  orbitwatch.js  radar.js  registry.js  runways.js  style.css  terminator.js  tiles.js  tripwires.js  units.js
web/src/layers/: aircraft.js  airports.js  bikeshare.js  boundaries.js  cities.js  conflict.js  events.js  jamming.js  launches.js  maritime.js  milair.js  outages.js  satellites.js  sea.js  seismic.js  stubs.js  thermal.js  webcams.js
