[package]
name = "argus-desktop"
version = "0.5.0"
description = "ARGUS — open-source 4D geospatial command center (desktop shell)"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
strip = true
lto = true
codegen-units = 1
